--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foldfile",
+  "name": "stream-setup",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
     "earcut": "^2.2.4",
-    "rabbit-ear": "^0.9.4",
+    "rabbit-ear": "../../rabbit-ear/",
     "svelte": "^5.0.0-next.120",
     "svelte-check": "^3.6.7",
     "tslib": "^2.6.2",
